chore (quality): improve sonarqube quality